# Chimera

./: README.md  chimera.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
bug_triggering_formulas/: README.md  collect.py  cvc5-projects_114_0.smt2  cvc5-projects_133_0.smt2  cvc5-projects_139_0.smt2  cvc5-projects_142_0.smt2  cvc5-projects_148_0.smt2  cvc5-projects_151_0.smt2  cvc5-projects_152_0.smt2  cvc5-projects_153_0.smt2  cvc5-projects_155_0.smt2  cvc5-projects_158_1.smt2  cvc5-projects_160_0.smt2  cvc5-projects_161_0.smt2  cvc5-projects_165_0.smt2  cvc5-projects_169_0.smt2  cvc5-projects_171_0.smt2  cvc5-projects_177_0.smt2  cvc5-projects_181_0.smt2  cvc5-projects_191_0.smt2  cvc5-projects_192_0.smt2  cvc5-projects_194_0.smt2  cvc5-projects_233_0.smt2  cvc5-projects_240_1.smt2  cvc5-projects_242_1.smt2  cvc5-projects_304_0.smt2  cvc5-projects_309_0.smt2  cvc5-projects_310_0.smt2  cvc5-projects_319_0.smt2  cvc5-projects_331_0.smt2  cvc5-projects_343_0.smt2  cvc5-projects_354_0.smt2  cvc5-projects_362_0.smt2  cvc5-projects_375_0.smt2  cvc5-projects_390_0.smt2  cvc5-projects_396_0.smt2  cvc5-projects_401_0.smt2  cvc5-projects_402_0.smt2  cvc5-projects_403_0.smt2  cvc5-projects_417_0.smt2  (+328 more)
bug_triggering_formulas/cases/: cvc5-projects_115_0.smt2  cvc5-projects_116_0.smt2  cvc5-projects_134_0.smt2  cvc5-projects_136_0.smt2  cvc5-projects_139_1.smt2  cvc5-projects_140_0.smt2  cvc5-projects_141_0.smt2  cvc5-projects_148_1.smt2  cvc5-projects_149_0.smt2  cvc5-projects_149_1.smt2  cvc5-projects_149_2.smt2  cvc5-projects_150_0.smt2  cvc5-projects_154_0.smt2  cvc5-projects_156_0.smt2  cvc5-projects_158_0.smt2  cvc5-projects_163_0.smt2  cvc5-projects_164_0.smt2  cvc5-projects_166_0.smt2  cvc5-projects_172_0.smt2  cvc5-projects_173_0.smt2  cvc5-projects_174_0.smt2  cvc5-projects_178_0.smt2  cvc5-projects_179_0.smt2  cvc5-projects_183_0.smt2  cvc5-projects_185_0.smt2  cvc5-projects_193_0.smt2  cvc5-projects_231_0.smt2  cvc5-projects_239_0.smt2  cvc5-projects_240_0.smt2  cvc5-projects_242_0.smt2  cvc5-projects_251_0.smt2  cvc5-projects_254_0.smt2  cvc5-projects_264_0.smt2  cvc5-projects_305_0.smt2  cvc5-projects_311_0.smt2  cvc5-projects_317_0.smt2  cvc5-projects_323_0.smt2  cvc5-projects_325_0.smt2  cvc5-projects_329_0.smt2  cvc5-projects_330_0.smt2  (+371 more)
chimera/: __init__.py  chimera_cli.py  constants.py  github_client.py  py.typed
chimera/config/: __init__.py  generator_config.py  generator_loader.py  theory_selection.py
chimera/core/: __init__.py  differential_oracle.py  formula_builder.py  logic_analyzer.py  smt_ast.py  smt_parser.py  solver_manager.py  timeout.py  types.py
chimera/engines/: __init__.py  aries_engine.py  base.py  histfuzz_engine.py  once4all_engine.py
chimera/history/: __init__.py  __main__.py  collector.py  corpus.py  extract.py  extractor.py
chimera/parsing/: AstVisitor.py  SMTLIBv2.pyi  SMTLIBv2Visitor.py
chimera/resources/: RewriteRule.csv  __init__.py
chimera/utils/: __init__.py
classify/: logic_classifier.py  smt_logic_detector.py
config/: generator_config.py  generator_loader.py
generator/: construct.py
generator/docs/: Bags.txt  Datatypes.txt  Finite_Fields.txt  HO-Core.txt  Ints.txt  Separation_Logic.txt  Sequences.txt  Sets_and_Relations.txt  Transcendentals.txt
generators/: README.md  bags_generator.py  construct.py  core_generator.py  cvc5strings_generator.py  datatypes_generator.py  fixedsizebitvectors_generator.py  floatingpoint_generator.py  ints_generator.py  reals_generator.py  realsints_generator.py  sequences_generator.py  strings_generator.py  transcendentals_generator.py  z3characters_generator.py  z3relation_generator.py  z3seq_generator.py
generators/cvc5/: bags_generator.py  cvc5strings_generator.py  finitefields_generator.py  hocore_generator.py  separationlogic_generator.py  sequences_generator.py  setsandrelations_generator.py  transcendentals_generator.py
generators/general/: arrayex_generator.py  core_generator.py  datatypes_generator.py  fixedsizebitvectors_generator.py  floatingpoint_generator.py  ints_generator.py  reals_generator.py  realsints_generator.py  strings_generator.py
generators/z3/: z3characters_generator.py  z3relation_generator.py  z3seq_generator.py
skeletons/: skeleton_exclusion.smt2
src/: building_blocks.py  constants.py  formula_utils.py  github_client.py  logic_detector.py  run_solver.py  skeleton.py
src/argument_parser/: parser.py
src/config/: generator_config.py  generator_loader.py  theory_selection.py
src/core/: fuzzer.py  mutator.py
src/generator/: array_generator.py  bag_generator.py  bv_generator.py  core_generator.py  (+13 more)
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_cli.py  test_core_fuzzer.py  test_differential_oracle.py  test_engines.py  test_formula_builder.py  test_generator.py  test_history.py  test_integration.py  test_logic_analyzer.py  test_parsing.py  test_run_solver.py  test_smt_ast.py  test_solver_manager.py  test_utils.py
(+84 files in other folders)
