[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera"
version = "2.0.0"
description = "Production-grade SMT solver fuzzing framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chimera Authors"}
]
keywords = ["smt", "solver", "fuzzing", "testing", "formal-methods"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "antlr4-python3-runtime==4.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
chimera = "chimera.chimera_cli:main"

[project.urls]
Homepage = "https://github.com/user/chimera"
Documentation = "https://github.com/user/chimera#readme"
Repository = "https://github.com/user/chimera"

[tool.setuptools.packages.find]
where = ["."]
include = ["chimera*"]

[tool.setuptools.package-data]
chimera = ["py.typed", "resources/*.csv", "resources/rewrite_config/*.txt"]

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

# Per-module overrides for gradual typing
[[tool.mypy.overrides]]
module = [
    "antlr4.*",
    "snake_egg.*",
]
ignore_missing_imports = true

# ANTLR-generated parser files - ignore errors as they're auto-generated
[[tool.mypy.overrides]]
module = [
    "chimera.parsing.SMTLIBv2Lexer",
    "chimera.parsing.SMTLIBv2Parser",
    "chimera.parsing.SMTLIBv2Visitor",
    "chimera.parsing.SMTLIBv2Listener",
    "chimera.parsing.AstVisitor",
]
ignore_errors = true

# Egraph module (rewrite engine) - third-party integration with limited type hints
[[tool.mypy.overrides]]
module = [
    "chimera.engines.egraph.*",
]
ignore_errors = true

# Legacy src modules - deprecated, ignore errors
[[tool.mypy.overrides]]
module = [
    "src.*",
]
ignore_errors = true

# =============================================================================
# Ruff Configuration (Linter & Formatter)
# =============================================================================
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.lint.isort]
known-first-party = ["chimera"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    # Ignore deprecation warnings in our own code during tests
    "ignore::DeprecationWarning:src.parsing",
    "ignore::DeprecationWarning:src.core",
    "ignore::DeprecationWarning:src.run_solver",
    "ignore::DeprecationWarning:src.formula_utils",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["chimera"]
branch = true
omit = [
    "chimera/parsing/SMTLIBv2*.py",  # ANTLR-generated
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
